# codex

./: .codespellignore  .codespellrc  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  NOTICE  PNPM.md  README.md  SUMMARY.md  cliff.toml  flake.nix  lint-staged.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
codex-rs/: Cargo.toml  README.md  config.md  justfile  rust-toolchain.toml  rustfmt.toml
codex-rs/ansi-escape/: Cargo.toml
codex-rs/ansi-escape/src/: lib.rs
codex-rs/apply-patch/: Cargo.toml  apply_patch_tool_instructions.md
codex-rs/apply-patch/src/: lib.rs  parser.rs  seek_sequence.rs
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs
codex-rs/chatgpt/tests/: apply_command_e2e.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  diff_open.rs  landlock.rs  lib.rs  login.rs  main.rs  proto.rs  seatbelt.rs
codex-rs/cli/src/linux-sandbox/: main.rs
codex-rs/common/: Cargo.toml
codex-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  elapsed.rs  lib.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
codex-rs/core/: Cargo.toml  README.md  prompt.md
codex-rs/core/src/: apply_patch.rs  approval_mode_cli_arg.rs  bash.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex_wrapper.rs  config.rs  config_profile.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  environment_context.rs  error.rs  exec.rs  exec_env.rs  exec_linux.rs  flags.rs  git_info.rs  is_safe_command.rs  landlock.rs  lib.rs  linux.rs  mcp_connection_manager.rs  mcp_server_config.rs  mcp_tool_call.rs  message_history.rs  model_family.rs  model_provider_info.rs  models.rs  openai_api_key.rs  openai_model_info.rs  openai_tools.rs  parse_command.rs  plan_tool.rs  project_doc.rs  protocol.rs  rollout.rs  safety.rs  (+11 more)
codex-rs/core/src/exec_command/: exec_command_session.rs  mod.rs  session_manager.rs
codex-rs/core/tests/: cli_stream.rs  client.rs  compact.rs  exec.rs  exec_stream_events.rs  live_agent.rs  live_cli.rs  previous_response_id.rs  prompt_caching.rs  sandbox.rs  seatbelt.rs  stream_error_allows_next_turn.rs  stream_no_completed.rs  test_support.rs
codex-rs/core/tests/common/: Cargo.toml  lib.rs
codex-rs/core/tests/suite/: cli_stream.rs  exec_stream_events.rs  mod.rs  prompt_caching.rs  seatbelt.rs  stream_no_completed.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  lib.rs  main.rs
codex-rs/exec/tests/: apply_patch.rs  sandbox.rs
codex-rs/exec/tests/fixtures/: sse_apply_patch_add.json  sse_apply_patch_freeform_add.json  sse_apply_patch_freeform_update.json  sse_apply_patch_update.json
codex-rs/exec/tests/suite/: apply_patch.rs  common.rs  mod.rs  sandbox.rs
codex-rs/execpolicy/: Cargo.toml
codex-rs/execpolicy/src/: arg_matcher.rs  arg_resolver.rs  arg_type.rs  default.policy  error.rs  exec_call.rs  execv_checker.rs  main.rs  opt.rs  policy.rs  policy_parser.rs  program.rs  sed_command.rs
codex-rs/execpolicy/tests/: bad.rs  cp.rs  good.rs  head.rs  literal.rs  ls.rs  parse_sed_command.rs  pwd.rs  sed.rs
codex-rs/file-search/: Cargo.toml
codex-rs/file-search/src/: cli.rs  lib.rs  main.rs
codex-rs/interactive/: Cargo.toml
codex-rs/interactive/src/: cli.rs  lib.rs  main.rs
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/linux-sandbox/src/: landlock.rs  lib.rs  linux_run_main.rs
codex-rs/linux-sandbox/tests/: landlock.rs
codex-rs/linux-sandbox/tests/suite/: landlock.rs
codex-rs/login/: Cargo.toml
codex-rs/login/src/: auth_manager.rs  lib.rs  login_with_chatgpt.py  pkce.rs  server.rs  token_data.rs
codex-rs/login/src/assets/: success.html
codex-rs/login/tests/: login_server_e2e.rs
codex-rs/login/tests/suite/: login_server_e2e.rs
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-client/src/: main.rs  mcp_client.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs  conversation_loop.rs  exec_approval.rs  json_to_toml.rs  lib.rs  main.rs  mcp_protocol.rs  message_processor.rs  outgoing_message.rs  patch_approval.rs  wire_format.rs
codex-rs/mcp-server/src/tool_handlers/: create_conversation.rs  mod.rs  send_message.rs
codex-rs/mcp-server/tests/: codex_message_processor_flow.rs  codex_tool.rs  create_conversation.rs  elicitation.rs  interrupt.rs  login.rs  send_message.rs
codex-rs/mcp-types/: Cargo.toml  README.md  generate_mcp_types.py
codex-rs/mcp-types/src/: lib.rs
codex-rs/mcp-types/tests/: initialize.rs  progress_notification.rs
codex-rs/ollama/: Cargo.toml
codex-rs/ollama/src/: client.rs  lib.rs  parser.rs
codex-rs/protocol/: Cargo.toml
codex-rs/protocol-ts/: Cargo.toml
codex-rs/protocol-ts/src/: lib.rs
codex-rs/protocol/src/: config_types.rs  lib.rs  mcp_protocol.rs  message_history.rs  models.rs  parse_command.rs  plan_tool.rs  protocol.rs
codex-rs/repl/: Cargo.toml
codex-rs/repl/src/: cli.rs  lib.rs  main.rs
codex-rs/scripts/: create_github_release.sh
codex-rs/tui/: Cargo.toml  styles.md
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  app_event_sender.rs  backtrack_helpers.rs  bottom_pane.rs  cell_widget.rs  chatwidget.rs  chatwidget_stream_tests.rs  citation_regex.rs  cli.rs  clipboard_paste.rs  colors.rs  common.rs  conversation_history_widget.rs  custom_terminal.rs  diff_render.rs  exec_command.rs  file_search.rs  get_git_diff.rs  git_warning_screen.rs  history_cell.rs  insert_history.rs  lib.rs  log_layer.rs  login_screen.rs  main.rs  markdown.rs  markdown_stream.rs  mouse_capture.rs  scroll_event_helper.rs  session_log.rs  shimmer.rs  slash_command.rs  status_indicator_widget.rs  text_block.rs  text_formatting.rs  transcript_app.rs  tui.rs  updates.rs  (+1 more)
codex-rs/tui/src/render/: mod.rs  (+2 more)
codex-rs/tui/tests/: vt100_history.rs  vt100_streaming_no_dup.rs
(+313 files in other folders)
