[workspace]
resolver = "2"
members = [
    "ansi-escape",
    "apply-patch",
    "cli",
    "core",
    "exec",
    "execpolicy",
    "repl",
    "tui",
]

[workspace.package]
version = "0.0.2504291954"

[profile.release]
lto = "fat"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"
