[package]
name = "codex-apply-patch"
version = { workspace = true }
edition = "2024"

[lib]
name = "codex_apply_patch"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
similar = "2.7.0"
thiserror = "2.0.12"
tree-sitter = "0.25.8"
tree-sitter-bash = "0.25.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.13.0"
