[package]
name = "codex-interactive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codex-interactive"
path = "src/main.rs"

[lib]
name = "codex_interactive"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codex-core = { path = "../core", features = ["cli"] }
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
