[package]
edition = "2024"
name = "codex-login"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }

[dev-dependencies]
tempfile = "3"
